fixed light/dark mode issue

--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ body {
 }
 
 .badge-section {
-	padding-bottom: 20px;
+	/* padding-bottom: 20px; */
 	display: flex;
 	align-content: space-between;
 }
